--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,5 +39,10 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "typedocOptions": {
+    "mode": "modules",
+    "out": "docs",
+    "exclude": ["./src/test/**"]
+  }
 }
