--- a/.travis.yml
+++ b/.travis.yml
@@ -20,17 +20,17 @@ deploy:
     local_dir: docs/
     github_token: $GITHUB_TOKEN
     on:
-      tags: true
+      tags: false
   - provider: releases
     api_key: $GITHUB_TOKEN
     file_glob: true
     file: lib.tgz
     skip_cleanup: true
     on:
-      tags: true
+      tags: false
   - provider: npm
     skip_cleanup: true
     email: ryderbrooks@gmail.com
     api_key: $NPM_TOKEN
     on:
-      tags: true
+      tags: false
