--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "ragent-pool",
   "version": "0.0.1",
   "description": "",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "setup": "npm install",
     "build": "tsc",
