--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ before_script:
   - npm run build
 
 script:
-  - npm run test
+  - npm run cover
+
+
+after_script:
+  "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
 
 after_success:
   - npm run typedoc
