--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ragent-pool",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -8,7 +8,7 @@
     "setup": "npm install",
     "build": "tsc",
     "test": "./node_modules/mocha/bin/mocha dist/test/ --exit",
-    "cover": "istanbul cover node_modules/mocha/bin/mocha dist/test/*.js -- -R spec",
+    "cover": "istanbul cover node_modules/mocha/bin/mocha dist/test/*.js",
     "clean": "shx rm -rf node_modules/ dist/ docs/",
     "typedoc": "typedoc",
     "posttypedoc": "shx cp .nojekyll docs/.nojekyll"
