--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "setup": "npm install",
     "build": "tsc",
-    "test": "./node_modules/mocha/bin/mocha dist/test/ --exit",
-    "cover": "istanbul cover node_modules/mocha/bin/mocha dist/test/*.js",
+    "test": "./node_modules/mocha/bin/mocha dist/test/ --reporter spec",
+    "cover": "istanbul cover node_modules/mocha/bin/mocha dist/test/*.js -- -R spec",
     "clean": "shx rm -rf node_modules/ dist/ docs/",
     "typedoc": "typedoc",
     "posttypedoc": "shx cp .nojekyll docs/.nojekyll"
