--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ before_script:
   - npm run build
 
 script:
-  - npm run cover
+  - npm run test
 
 
 after_script:
-  "cat coverage/lcov.info | node_modules/coveralls/bin/coveralls.js"
+  - npm run coverage
 
 after_success:
   - npm run typedoc
