--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "setup": "npm install",
     "build": "tsc",
-    "test": "./node_modules/mocha/bin/mocha dist/test/ --reporter spec",
-    "cover": "istanbul cover node_modules/mocha/bin/mocha dist/test/*.js -- -R spec",
+    "test": "nyc ./node_modules/mocha/bin/mocha dist/test/ ",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "clean": "shx rm -rf node_modules/ dist/ docs/",
     "typedoc": "typedoc",
     "posttypedoc": "shx cp .nojekyll docs/.nojekyll"
@@ -40,8 +40,8 @@
     "eslint": "^5.15.3",
     "eslint-plugin-tslint": "^3.1.0",
     "eslint-plugin-typescript": "^0.12.0",
-    "istanbul": "^0.4.5",
     "mocha": "^6.0.2",
+    "nyc": "^13.3.0",
     "shx": "^0.3.2",
     "sinon": "^6.3.5",
     "tslint": "^5.14.0",
