--- a/.travis.yml
+++ b/.travis.yml
@@ -23,15 +23,21 @@ deploy:
     skip_cleanup: true
     local_dir: docs/
     github_token: $GITHUB_TOKEN
+    on:
+      tags: true
 
   - provider: releases
     api_key: $GITHUB_TOKEN
     file_glob: true
     file: lib.tgz
     skip_cleanup: true
+    on:
+      tags: true
 
   - provider: npm
     skip_cleanup: true
     email: ryderbrooks@gmail.com
     api_key: $NPM_TOKEN
+    on:
+      tags: true
 
